--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ruta/new.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ruta/new.html.twig
@@ -45,6 +45,9 @@
                     <div class="formErrors">{{ form_errors(form.institution) }}</div>
                     <label><span class="text-form" style="min-width: 150px;">{% trans %}label.institution{% endtrans %}</span>{{ form_widget(form.institution) }}</label>
 
+                    <div class="formErrors">{{ form_errors(form.routeType) }}</div>
+                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.type{% endtrans %}</span>{{ form_widget(form.routeType) }}</label>
+
                     <div class="left"><a href="{{ path('_expediente_sysadmin_route') }}" class="btn delete"><span></span>{% trans %}label.cancelar{% endtrans %}</a></div>
                     <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="left btn save" name="save"><span></span>{% trans %}label.save{% endtrans %}</button>
                     <div class="clear"></div>                    
