--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
@@ -111,7 +111,8 @@
                                         <div class="option_width" style="float: left; width: 100px;">{% trans %}label.max_value{% endtrans %}</div>
                                         <div class="option_width" style="float: left; width: 100px;">{% trans %}label.order{% endtrans %}</div>
                                         <div class="option_width" style="float: left; width: 150px;">{% trans %}label.parent{% endtrans %}</div>
-                                        <button style="margin-left: 15px; margin-top: -5px;" type="button" class="right btn new" name="subbuttonNewEntry" id="subbuttonNewEntry" href="#inline"><a id="openEntryForm" class="modalbox" href="#subentryFormContainer">{% trans %}label.include{% endtrans %}</a></button>
+                                        <a id="openEntryForm" class="right btn new modalbox" style="margin-top: -5px;" href="#subentryFormContainer">{% trans %}label.include{% endtrans %}</a>
+
                                     </div>
                                     <div id="subentriesRows" name="subentriesRows">
                                     </div>
