--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
@@ -92,7 +92,7 @@
         </div>
 
         <div class="centeredDiv">
-            <div class="formContainer" style="width: 920px; height: 650px;">
+            <div id="studentsTableContainer" name="studentsTableContainer" class="formContainer" style="width: 920px; height: 650px;">
                 <div id="showContainer">
                     <div style="margin-bottom: 15px;">
                         <div class="left" style="width: 50px; font-weight: bold;">{%trans%}label.period{%endtrans%}</div>
