--- a/web/expediente/css/style.css
+++ b/web/expediente/css/style.css
@@ -189,7 +189,7 @@ footer h4{ color:#fff;}
 .tableRowOdd{border-bottom: 1px solid #DDD; background: transparent}
 .row:hover{background-color: palegoldenrod;}
 
-.row a{float:right; margin-right:0px}
+.row a{ margin-right:0px}
 .option_width{height:18px;}
 
 .right {float: right;}
