--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -125,7 +125,7 @@
                         <li><a style="text-align: left;" href="{{ path('_expediente_report_students_by_route') }}">{% trans %}label.students.by.route{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_report_students_by_route') }}">{% trans %}label.students.absences.by.route{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_report_daily_by_route') }}">{% trans %}label.students.daily.by.route{% endtrans %}</a></li>
-
+                        <li><a style="text-align: left;" href="{{ path('_expediente_report_students') }}">{% trans %}label.students{% endtrans %}</a></li>
                     </ul>
                 </li>
                 <li {% if menuIndex is defined and menuIndex == 5%}class="current"{% endif %}><a href="#"><em>{% trans %}label.mantenimientos{% endtrans %}</em><strong></strong></a>
