Students report update

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/edit.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/edit.html.twig
@@ -41,6 +41,12 @@
                         <div class="formErrors">{{ form_errors(form.carne) }}</div>
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.carne{% endtrans %}</span>{{ form_widget(form.carne) }}</label>
 
+                        <div class="formErrors">{{ form_errors(form.age) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.age{% endtrans %}</span>{{ form_widget(form.age) }}</label>
+
+                        <div class="formErrors">{{ form_errors(form.gender) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.gender{% endtrans %}</span>{{ form_widget(form.gender) }}</label>
+
                         <div class="formErrors">{{ form_errors(form.address) }}</div>
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.address{% endtrans %}</span>{{ form_widget(form.address) }}</label>
 
