--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/list.html.twig
@@ -32,7 +32,12 @@
             <div class="option_width" style="float: left; width: 200px; margin-left: -6px;">
                 {{ pagination.sortable('Apellidos', 's.lastname')|raw }}
             </div>
-
+            <div class="option_width" style="float: left; width: 90px; margin-left: -6px;">
+                {{ pagination.sortable('Edad', 's.age')|raw }}
+            </div>
+            <div class="option_width" style="float: left; width: 100px; margin-left: -6px;">
+                {{ pagination.sortable('Genero', 's.gender')|raw }}
+            </div>
             <div class="right"><a style="margin-top: -6px;" href="#" class="btn search" id="btnSearch" name="btnSearch"><span></span>{% trans %}label.search{% endtrans %}</a></div>
             <div class="option_width right" style="margin-top: -4px;">
                 <input id="searchText" name="searchText" value="{{ text }}">
@@ -44,9 +49,11 @@
 
         {% for entity in pagination %}            
             <div class="row userRow {% if counter%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}" rel="{{ entity.id }}">
-                <div class="option_width" style="float: left; width: 100px;">{{ entity.carne }}</div>
-                <div class="option_width" style="float: left; width: 200px;">{{ entity.firstname }}</div>
-                <div class="option_width" style="float: left; width: 200px;">{{ entity.lastname }}</div>
+                <div class="option_width" style="float: left; width: 100px; margin-left: -6px;">{{ entity.carne }}</div>
+                <div class="option_width" style="float: left; width: 200px; margin-left: -6px;">{{ entity.firstname }}</div>
+                <div class="option_width" style="float: left; width: 200px; margin-left: -6px;">{{ entity.lastname }}</div>
+                <div class="option_width" style="float: left; width: 90px; margin-left: -6px;">{{ entity.age }}</div>
+                <div class="option_width" style="float: left; width: 100px; margin-left: -6px;">{% if entity.gender == 1%}{% trans %}label.male{% endtrans %}{% else %}{% trans %}label.female{% endtrans %}{% endif %}</div>
                 <div class="right imageButton editButton"  title="{% trans %}label.edit{% endtrans %}"  rel="{{ entity.id }}"></div>
                 <div class="right imageButton viewButton"  title="{% trans %}label.view{% endtrans %}"  rel="{{ entity.id }}"></div>
                 <div class="clear"></div>
