--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Club/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Club/show.html.twig
@@ -57,12 +57,12 @@
                                 </div>
                                 <div>
                                     <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.timeI{%endtrans%}</div>
-                                    <div id="labelTimeI" class="left">{% if entity.timeI != null %}{{ entity.timeI|date("d/M/y") }}{% endif %}</div>
+                                    <div id="labelTimeI" class="left">{{ entity.timeI }}</div>
                                     <div class="clear"></div>
                                 </div>
                                 <div>
                                     <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.timeO{%endtrans%}</div>
-                                    <div id="labelTimeO" class="left">{% if entity.timeO != null %}{{ entity.timeO|date("d/M/y") }}{% endif %}</div>
+                                    <div id="labelTimeO" class="left">{{ entity.timeO }}</div>
                                     <div class="clear"></div>
                                 </div>
 
