--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
@@ -27,7 +27,6 @@
                 <h1>{% trans %}label.report.students.title{% endtrans %}</h1>
                 <span>{% trans %}label.report.students.subtitle{% endtrans %}</span>
             </div>
-            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn new" name="buttonNew" id="buttonNew" href="#inline"><a id="newAbsence"  class="modalbox" href="#inline">{% trans %}label.new{% endtrans %}</a></button>
             <div class="clear"></div>
         </div>
         <div class="filter-search">
@@ -56,7 +55,7 @@
 
         {% if tipo != 0 %}
         <div style="margin-top: 15px;">
-            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn print" id="btnPrint" name="btnPrint" rel="Listado de Estudiantes"><span></span>{% trans %}label.print{% endtrans %}</button>
+            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn print" id="btnPrint" name="btnPrint" rel="Reporte de Clubes"><span></span>{% trans %}label.print{% endtrans %}</button>
             <div class="clear"></div>
         </div>
         <div id="report" style="margin-top: 25px;">
