--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -92,6 +92,9 @@
 		<nav class="main-menu">
                         
 			<ul class="sf-menu">
+                <li {% if menuIndex is not defined %}class="current"{% endif %}><a href="{{ path('TecnotekExpedienteBundle_homepage') }}"><em>{% trans %}label.home{% endtrans %}</em><strong></strong></a>
+
+                </li>
             {% if is_granted('ROLE_SUPERADMIN') %}
                 <li {% if menuIndex is defined and menuIndex == 1%}class="current"{% endif %}><a href="{{ path('_expediente_sysadmin_administrador') }}"><em>{% trans %}label.usuarios{% endtrans %}</em><strong></strong></a>
                     <ul>
@@ -126,6 +129,7 @@
                         <li><a style="text-align: left;" href="{{ path('_expediente_report_students_by_route') }}">{% trans %}label.students.absences.by.route{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_report_daily_by_route') }}">{% trans %}label.students.daily.by.route{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_report_students') }}">{% trans %}label.students{% endtrans %}</a></li>
+                        <li><a style="text-align: left;" href="{{ path('_expediente_report_clubs') }}">{% trans %}label.clubs{% endtrans %}</a></li>
                     </ul>
                 </li>
                 <li {% if menuIndex is defined and menuIndex == 5%}class="current"{% endif %}><a href="#"><em>{% trans %}label.mantenimientos{% endtrans %}</em><strong></strong></a>
